# AndroidSlam

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/cntlab/f304/androidslam/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/images/: school.image
app/src/main/assets/shader/: debug_texture.frag  global_mvp.vert  image.frag  image2d.frag  image3d.frag  image3d.vert  mvp.vert  pure_color.frag  triangle.frag  triangle.vert  yuv2rgb.frag  yuv2rgb.vert
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/app/: CMakeLists.txt
app/src/main/cpp/app/include/core/: App.h  CalibScene.h  InitScene.h  Scene.h  SlamScene.h  Window.h
app/src/main/cpp/app/include/render/: AABB.h  ImagePool.h  ImageTexture.h  Model.h  Plane2D.h  SensorTexture.h  Shader.h  SlamRenderer.h
app/src/main/cpp/app/include/sensor/: SensorCamera.h  SensorIMU.h
app/src/main/cpp/app/include/utils/: AssetManager.h  ImageLoader.h  Log.h  Timer.h
app/src/main/cpp/app/src/core/: App.cpp  CalibScene.cpp  InitScene.cpp  Main.cpp  SlamScene.cpp  Window.cpp
app/src/main/cpp/app/src/render/: ImagePool.cpp  Plane2D.cpp  SensorTexture.cpp  Shader.cpp  SlamRenderer.cpp
app/src/main/cpp/app/src/sensor/: SensorCamera.cpp  SensorIMU.cpp
app/src/main/cpp/app/src/utils/: AssetManager.cpp  ImageLoader.cpp  Timer.cpp
app/src/main/cpp/slam/: CMakeLists.txt
app/src/main/cpp/slam/include/camera_models/: GeometricCamera.h  KannalaBrandt8.h  Pinhole.h
app/src/main/cpp/slam/include/core/: System.h
app/src/main/cpp/slam/include/feature/: ORBVocabulary.h  ORBextractor.h  ORBmatcher.h
app/src/main/cpp/slam/include/frame/: Frame.h  KeyFrame.h  KeyFrameDatabase.h
app/src/main/cpp/slam/include/map/: Atlas.h  Map.h  MapPoint.h
app/src/main/cpp/slam/include/solver/: G2oTypes.h  MLPnPsolver.h  OptimizableTypes.h  Optimizer.h  Sim3Solver.h  TwoViewReconstruction.h
app/src/main/cpp/slam/include/threads/: LocalMapping.h  LoopClosing.h  Tracking.h
app/src/main/cpp/slam/include/utils/: Config.h  Converter.h  ImuTypes.h  Settings.h
app/src/main/cpp/slam/interface/: SlamKernel.cpp  SlamKernel.h
app/src/main/cpp/slam/src/camera_models/: KannalaBrandt8.cpp  Pinhole.cpp
app/src/main/cpp/slam/src/core/: System.cpp
app/src/main/cpp/slam/src/feature/: ORBextractor.cpp  ORBmatcher.cpp
app/src/main/cpp/slam/src/frame/: Frame.cpp  KeyFrame.cpp  KeyFrameDatabase.cpp
app/src/main/cpp/slam/src/map/: Atlas.cpp  Map.cpp  MapPoint.cpp
app/src/main/cpp/slam/src/solver/: G2oTypes.cpp  MLPnPsolver.cpp  OptimizableTypes.cpp  Optimizer.cpp  Sim3Solver.cpp  TwoViewReconstruction.cpp
app/src/main/cpp/slam/src/threads/: LocalMapping.cpp  LoopClosing.cpp  Tracking.cpp
app/src/main/cpp/slam/src/utils/: Config.cpp  Converter.cpp  GeometricTools.cpp  ImuTypes.cpp  Settings.cpp
app/src/main/java/cntlab/f304/androidslam/: MainActivity.java
app/src/main/res/mipmap-anydpi-v26/: doge.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/cntlab/f304/androidslam/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
